--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
+    "bigint-conversion": "^2.1.12",
     "chai": "^4.3.3",
     "mocha": "^8.3.0",
     "ts-node": "^9.1.1",
