--- a/package.json
+++ b/package.json
@@ -7,12 +7,22 @@
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "dependencies": {
+    "bigint-conversion": "^2.1.12"
+  },
+  "devDependencies": {
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
-    "bigint-conversion": "^2.1.12",
+    "@typescript-eslint/eslint-plugin": "4",
     "chai": "^4.3.3",
+    "eslint": "7",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
     "mocha": "^8.3.0",
+    "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
